nodeappdep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app-deployment
  labels:
    app: node-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app-container
          image: public.ecr.aws/g0s4g8j9/elastisys/nodeapp:latest
          ports:
            - containerPort: 3000
