service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app-service
spec:
  type: LoadBalancer
  selector:
    app: node-app
  ports:
      - port: 80
        targetPort: 3000
        protocol: TCP
